Adding finalized Deliverable 2

--- a/Vacation_Search/Vacation_Search.ipynb
+++ b/Vacation_Search/Vacation_Search.ipynb
@@ -1032,13 +1032,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 9. Using the template add city name, the country code, the weather description and maximum temperature for the city.\n",
+    "# 9. Using the template add hotel name, city name, country, the weather description and maximum temperature for the city.\n",
     "info_box_template = \"\"\"\n",
     "<dl>\n",
+    "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
     "<dt>City</dt><dd>{City}</dd>\n",
     "<dt>Country</dt><dd>{Country}</dd>\n",
-    "<dt>Current Weather</dt><dd>{Current Description}</dd>\n",
-    "<dt>Max Temp</dt><dd>{Max Temp} F</dd>\n",
+    "<dt>Current Weather</dt><dd>{Current Description} and {Max Temp} &#8304;F</dd>\n",
     "<dl>\n",
     "\"\"\"\n",
     "\n",
@@ -1057,7 +1057,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38387887311c44fbb8fb7efb83ba61f7",
+       "model_id": "01934ae27b3944bf8ece2b95df101a2f",
        "version_major": 2,
        "version_minor": 0
       },
